<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AddStudentsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="346dp"
        android:layout_height="572dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496"
        tools:ignore="MissingConstraints">


        <EditText
            android:id="@+id/etSurname"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:hint="@string/etSurname"
            android:inputType="text|textPersonName"
            android:paddingStart="40dp"
            android:textColor="#000000"
            android:textColorHint="#6D4D83"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:textColor="#000000"
            android:ems="10"
            android:paddingStart="40dp"
            android:hint="@string/etName"
            android:inputType="text"
            android:textColorHint="#6D4D83"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSurname"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/etPatronym"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:textColor="#000000"
            android:paddingStart="40dp"
            android:ems="10"
            android:hint="@string/etPatronym"
            android:inputType="text"
            android:textColorHint="#6D4D83"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/etFaculty"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:paddingStart="40dp"
            android:background="@drawable/rounded_edittext"
            android:textColor="#000000"
            android:ems="10"
            android:hint="@string/etFaculty"
            android:inputType="text"
            android:textColorHint="#6D4D83"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPatronym"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/etGroup"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:textColor="#000000"
            android:ems="10"
            android:paddingStart="40dp"
            android:hint="@string/etGroup"
            android:inputType="number"
            android:textColorHint="#6D4D83"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFaculty"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:textColor="#000000"
            android:ems="10"
            android:paddingStart="40dp"
            android:hint="@string/etPhone"
            android:inputType="phone"
            android:textColorHint="#6D4D83"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etGroup"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="118dp"
            android:layout_height="50dp"
            android:layout_marginStart="48dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btnSave"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPhone"
            app:layout_constraintVertical_bias="0.505"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="118dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btnCancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.225"
            app:layout_constraintStart_toEndOf="@+id/btnSave"
            app:layout_constraintTop_toBottomOf="@+id/etPhone"
            app:layout_constraintVertical_bias="0.505"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="48dp"
            android:src="@drawable/man"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.096"
            android:contentDescription="@string/todo" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="48dp"
            android:src="@drawable/man"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.224"
            android:contentDescription="@string/todo2" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="48dp"
            android:src="@drawable/man"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.347"
            android:contentDescription="@string/man3"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="48dp"
            android:src="@drawable/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.469"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="48dp"
            android:src="@drawable/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.592"
            android:contentDescription="@string/man2"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="48dp"
            android:src="@drawable/phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.719"
            android:contentDescription="@string/man"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>